[gd_scene load_steps=5 format=3 uid="uid://dbfach6vd86x"]

[ext_resource type="Script" path="res://title/tittle_screen.gd" id="1_6r2gw"]
[ext_resource type="Texture2D" uid="uid://cgpfdlqld2cvm" path="res://title/title_init1.png" id="2_0h63f"]
[ext_resource type="Theme" uid="uid://clewuq8bf48c6" path="res://title/newbutton.tres" id="2_yhxnv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4wyw4"]

[node name="TittleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6r2gw")

[node name="Bg" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 480.0
offset_bottom = 270.0
size_flags_horizontal = 4
texture = ExtResource("2_0h63f")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -453.0
offset_top = 154.0
offset_right = -283.0
offset_bottom = 264.0
grow_horizontal = 2
scale = Vector2(1.29054, 1.00509)
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yhxnv")
text = "START"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_4wyw4")

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_yhxnv")
text = "EXIT
"

[node name="Camera2D" type="Camera2D" parent="MarginContainer"]
position = Vector2(89.1101, -18.9038)
zoom = Vector2(2.5, 2.5)

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
